--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#EAF1F9"
     tools:context="com.yf.bx.tms.activity.MainActivity">
 <FrameLayout
     android:layout_width="match_parent"
