--- a/app/src/main/res/layout/activity_xxbg.xml
+++ b/app/src/main/res/layout/activity_xxbg.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:background="#EAF1F9"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 <FrameLayout
@@ -39,6 +40,8 @@
             android:layout_gravity="center_vertical"
             android:src="@drawable/wwyt"/>
         <TextView
+            android:layout_marginLeft="10px"
+            android:id="@+id/tv_gdtb_notice"
             android:layout_marginRight="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -51,6 +54,7 @@
     </LinearLayout>
 </FrameLayout>
     <RadioGroup
+        android:id="@+id/xxbg_rg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -60,7 +64,7 @@
             android:button="@null"
             android:clickable="true"
             android:background="@drawable/xxbg_radio"
-            android:id="@+id/tv_xxbg_gdtb"
+            android:id="@+id/rb_xxbg_gdtb"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
@@ -73,7 +77,7 @@
             android:button="@null"
             android:clickable="true"
             android:background="@drawable/xxbg_radio"
-            android:id="@+id/tv_xxbg_gdps"
+            android:id="@+id/rb_xxbg_gdps"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
@@ -86,7 +90,7 @@
             android:button="@null"
             android:clickable="true"
             android:background="@drawable/xxbg_radio"
-            android:id="@+id/tv_xxbg_gdcl"
+            android:id="@+id/rb_xxbg_gdcl"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
@@ -99,7 +103,7 @@
             android:button="@null"
             android:clickable="true"
             android:background="@drawable/xxbg_radio"
-            android:id="@+id/tv_xxbg_yhpj"
+            android:id="@+id/rb_xxbg_yhpj"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
@@ -112,7 +116,7 @@
             android:button="@null"
             android:clickable="true"
             android:background="@drawable/xxbg_radio"
-            android:id="@+id/tv_xxbg_wwytpj"
+            android:id="@+id/rb_xxbg_wwytpj"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
