--- a/app/src/main/res/layout/fragment_gdtb.xml
+++ b/app/src/main/res/layout/fragment_gdtb.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#EAF1F9">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -13,9 +14,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
-        android:layout_width="180px"
+        android:layout_width="200px"
         android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/rotate_dashline"
         android:gravity="center"
         android:text="问题标题"
         android:textSize="16sp"
@@ -23,7 +23,6 @@
     <TextView
         android:layout_width="150px"
         android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/rotate_dashline"
         android:gravity="center"
         android:text="联系人"
         android:textSize="16sp"
@@ -31,7 +30,6 @@
     <TextView
         android:layout_width="200px"
         android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/rotate_dashline"
         android:gravity="center"
         android:text="联系电话"
         android:textSize="16sp"
@@ -39,23 +37,20 @@
     <TextView
         android:layout_width="250px"
         android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/rotate_dashline"
         android:gravity="center"
         android:text="发生地点"
         android:textSize="16sp"
         android:textColor="@color/white"/>
     <TextView
-        android:layout_width="150px"
+        android:layout_width="170px"
         android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/rotate_dashline"
         android:gravity="center"
         android:text="工单状态"
         android:textSize="16sp"
         android:textColor="@color/white"/>
     <TextView
-        android:layout_width="150px"
+        android:layout_width="170px"
         android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/rotate_dashline"
         android:gravity="center"
         android:text="紧急程度"
         android:textSize="16sp"
@@ -72,6 +67,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/gdtb_title"
         android:layout_gravity="bottom"
+        android:orientation="horizontal"
         android:gravity="center">
         <LinearLayout
             android:id="@+id/ll_gdtb_add"
