--- a/app/src/main/res/layout/fragment_gdtb_add.xml
+++ b/app/src/main/res/layout/fragment_gdtb_add.xml
@@ -1,23 +1,333 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<LinearLayout
-    android:layout_marginTop="5px"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:layout_height="match_parent"
+    android:background="#EAF1F9">
+    <RelativeLayout
+        android:layout_marginLeft="5px"
+        android:layout_marginTop="5px"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_marginLeft="47px"
+            android:id="@+id/tv_gdtb_add_wtbt2"
+            android:layout_width="wrap_content"
+            android:layout_height="60px"
+            android:text="问题标题:"
+            android:drawableLeft="@drawable/xingxing"
+            android:textColor="#3171AF"
+            android:gravity="center_vertical"
+            android:layout_gravity="center_vertical"
+            android:textSize="18sp"/>
+        <EditText
+            android:layout_toRightOf="@id/tv_gdtb_add_wtbt2"
+            android:id="@+id/tv_gdtb_add_wtbt"
+            android:maxLength="20"
+            android:layout_width="650px"
+            android:layout_height="60px"
+            android:background="@drawable/tv_bg"/>
+        <TextView
+            android:layout_toRightOf="@id/tv_gdtb_add_wtbt"
+            android:layout_marginLeft="10px"
+            android:id="@+id/tv_gdtb_add_wtlx2"
+            android:layout_width="wrap_content"
+            android:layout_height="60px"
+            android:gravity="center_vertical"
+            android:text="问题类型:"
+            android:drawableLeft="@drawable/xingxing"
+            android:textColor="#3171AF"
+            android:layout_gravity="center_vertical"
+            android:textSize="18sp"/>
+        <EditText
+            android:layout_toRightOf="@id/tv_gdtb_add_wtlx2"
+            android:id="@+id/tv_gdtb_add_wtlx"
+            android:layout_width="208px"
+            android:layout_height="60px"
+            android:background="@drawable/tv_bg"/>
+        <Spinner
+            android:layout_toRightOf="@id/tv_gdtb_add_wtlx"
+            android:id="@+id/spinner_gdtb_add_wtlx"
+            android:layout_width="wrap_content"
+            android:layout_height="60px"
+            android:spinnerMode="dropdown"
+            android:background="@drawable/gdtb_spinner"
+            />
+        <TextView
+            android:layout_marginTop="5px"
+            android:id="@+id/tv_gdtb_add_wtms2"
+            android:layout_below="@id/tv_gdtb_add_wtbt2"
+            android:layout_alignRight="@id/tv_gdtb_add_wtbt2"
+            android:layout_width="wrap_content"
+            android:layout_height="60px"
+            android:text="问题描述:"
+            android:drawableLeft="@drawable/xingxing"
+            android:textColor="#3171AF"
+            android:gravity="center_vertical"
+            android:layout_gravity="center_vertical"
+            android:textSize="18sp"/>
+        <EditText
+            android:layout_marginTop="5px"
+            android:maxLength="100"
+            android:layout_toRightOf="@id/tv_gdtb_add_wtms2"
+            android:layout_below="@id/tv_gdtb_add_wtbt2"
+            android:id="@+id/tv_gdtb_add_wtms"
+            android:layout_width="wrap_content"
+            android:layout_alignRight="@id/spinner_gdtb_add_wtlx"
+            android:layout_height="130px"
+            android:background="@drawable/tv_bg"/>
+        <TextView
+            android:layout_marginTop="5px"
+            android:id="@+id/tv_gdtb_add_lxr2"
+            android:layout_below="@id/tv_gdtb_add_wtms"
+            android:layout_alignRight="@id/tv_gdtb_add_wtbt2"
+            android:layout_width="wrap_content"
+            android:layout_height="60px"
+            android:text="联系人:"
+            android:drawableLeft="@drawable/xingxing"
+            android:textColor="#3171AF"
+            android:gravity="center_vertical"
+            android:layout_gravity="center_vertical"
+            android:textSize="18sp"/>
+        <EditText
+            android:layout_marginTop="5px"
+            android:layout_toRightOf="@id/tv_gdtb_add_lxr2"
+            android:layout_below="@id/tv_gdtb_add_wtms"
+            android:id="@+id/tv_gdtb_add_lxr"
+            android:layout_width="460px"
+            android:layout_height="60px"
+            android:background="@drawable/tv_bg"/>
+        <TextView
+            android:layout_marginTop="5px"
+            android:id="@+id/tv_gdtb_add_lxdh2"
+            android:layout_below="@id/tv_gdtb_add_wtms"
+            android:layout_toRightOf="@id/tv_gdtb_add_lxr"
+            android:layout_width="wrap_content"
+            android:layout_height="60px"
+            android:text="联系电话:"
+            android:drawableLeft="@drawable/xingxing"
+            android:textColor="#3171AF"
+            android:gravity="center_vertical"
+            android:layout_gravity="center_vertical"
+            android:textSize="18sp"/>
+        <EditText
+            android:layout_marginTop="5px"
+            android:layout_toRightOf="@id/tv_gdtb_add_lxdh2"
+            android:layout_below="@id/tv_gdtb_add_wtms"
+            android:id="@+id/tv_gdtb_add_lxdh"
+            android:layout_width="460px"
+            android:layout_height="60px"
+            android:background="@drawable/tv_bg"/>
+
+        <TextView
+            android:layout_marginTop="5px"
+            android:id="@+id/tv_gdtb_add_wtfssj2"
+            android:layout_below="@id/tv_gdtb_add_lxr"
+            android:layout_width="wrap_content"
+            android:layout_height="60px"
+            android:text="问题发生时间:"
+            android:drawableLeft="@drawable/xingxing"
+            android:textColor="#3171AF"
+            android:gravity="center_vertical"
+            android:layout_gravity="center_vertical"
+            android:textSize="18sp"/>
+        <EditText
+            android:layout_marginTop="5px"
+            android:layout_toRightOf="@id/tv_gdtb_add_wtfssj2"
+            android:layout_below="@id/tv_gdtb_add_lxr"
+            android:id="@+id/tv_gdtb_add_wtfssj"
+            android:layout_width="460px"
+            android:layout_height="60px"
+            android:background="@drawable/tv_bg"/>
+        <TextView
+            android:layout_marginTop="5px"
+            android:id="@+id/tv_gdtb_add_fsdd2"
+            android:layout_below="@id/tv_gdtb_add_lxr"
+            android:layout_toRightOf="@id/tv_gdtb_add_wtfssj"
+            android:layout_width="wrap_content"
+            android:layout_height="60px"
+            android:text="发生地点:"
+            android:drawableLeft="@drawable/xingxing"
+            android:textColor="#3171AF"
+            android:gravity="center_vertical"
+            android:layout_gravity="center_vertical"
+            android:textSize="18sp"/>
+        <EditText
+            android:layout_marginTop="5px"
+            android:layout_toRightOf="@id/tv_gdtb_add_fsdd2"
+            android:layout_below="@id/tv_gdtb_add_lxr"
+            android:id="@+id/tv_gdtb_add_fsdd"
+            android:layout_width="460px"
+            android:layout_height="60px"
+            android:background="@drawable/tv_bg"/>
+
+
+        <TextView
+            android:layout_marginTop="5px"
+            android:id="@+id/tv_gdtb_add_bm2"
+            android:layout_alignRight="@id/tv_gdtb_add_wtfssj2"
+            android:layout_below="@id/tv_gdtb_add_wtfssj2"
+            android:layout_width="wrap_content"
+            android:layout_height="60px"
+            android:text="部门:"
+            android:drawableLeft="@drawable/xingxing"
+            android:textColor="#3171AF"
+            android:gravity="center_vertical"
+            android:layout_gravity="center_vertical"
+            android:textSize="18sp"/>
+        <EditText
+            android:layout_marginTop="5px"
+            android:layout_toRightOf="@id/tv_gdtb_add_bm2"
+            android:layout_below="@id/tv_gdtb_add_wtfssj2"
+            android:id="@+id/tv_gdtb_add_bm"
+            android:layout_width="460px"
+            android:layout_height="60px"
+            android:background="@drawable/tv_bg"/>
+        <TextView
+            android:layout_marginTop="5px"
+            android:id="@+id/tv_gdtb_add_sbbm2"
+            android:layout_below="@id/tv_gdtb_add_wtfssj2"
+            android:layout_toRightOf="@id/tv_gdtb_add_wtfssj"
+            android:layout_width="wrap_content"
+            android:layout_height="60px"
+            android:layout_alignRight="@id/tv_gdtb_add_fsdd2"
+            android:text="设备编码:"
+            android:textColor="#3171AF"
+            android:gravity="center_vertical|right"
+            android:layout_gravity="center_vertical"
+            android:textSize="18sp"/>
+        <EditText
+            android:layout_marginTop="5px"
+            android:layout_toRightOf="@id/tv_gdtb_add_fsdd2"
+            android:layout_below="@id/tv_gdtb_add_wtfssj2"
+            android:id="@+id/tv_gdtb_add_sbbm"
+            android:layout_width="260px"
+            android:layout_height="60px"
+            android:background="@drawable/tv_bg"/>
+
+        <TextView
+            android:layout_marginTop="5px"
+            android:id="@+id/tv_gdtb_add_sbms2"
+            android:layout_alignRight="@id/tv_gdtb_add_wtfssj2"
+            android:layout_below="@id/tv_gdtb_add_bm"
+            android:layout_width="wrap_content"
+            android:layout_height="60px"
+            android:text="设备描述:"
+            android:drawableLeft="@drawable/xingxing"
+            android:textColor="#3171AF"
+            android:gravity="center_vertical"
+            android:layout_gravity="center_vertical"
+            android:textSize="18sp"/>
+        <EditText
+            android:layout_marginTop="5px"
+            android:layout_toRightOf="@id/tv_gdtb_add_wtfssj2"
+            android:layout_below="@id/tv_gdtb_add_bm"
+            android:id="@+id/tv_gdtb_add_sbms"
+            android:layout_width="460px"
+            android:layout_height="60px"
+            android:maxLength="20"
+            android:background="@drawable/tv_bg"/>
+        <TextView
+            android:layout_marginTop="5px"
+            android:id="@+id/tv_gdtb_add_jjcd2"
+            android:layout_below="@id/tv_gdtb_add_bm"
+            android:layout_toRightOf="@id/tv_gdtb_add_wtfssj"
+            android:layout_width="wrap_content"
+            android:layout_height="60px"
+            android:text="紧急程度:"
+            android:drawableLeft="@drawable/xingxing"
+            android:textColor="#3171AF"
+            android:gravity="center_vertical"
+            android:layout_gravity="center_vertical"
+            android:textSize="18sp"/>
+        <EditText
+            android:layout_marginTop="5px"
+            android:layout_toRightOf="@id/tv_gdtb_add_fsdd2"
+            android:layout_below="@id/tv_gdtb_add_bm"
+            android:id="@+id/tv_gdtb_add_jjcd"
+            android:layout_width="260px"
+            android:layout_height="60px"
+            android:background="@drawable/tv_bg"/>
+        <Spinner
+            android:layout_marginTop="5px"
+            android:layout_toRightOf="@id/tv_gdtb_add_jjcd"
+            android:layout_below="@id/tv_gdtb_add_bm"
+            android:id="@+id/spinner_gdtb_add_jjcd"
+            android:layout_width="wrap_content"
+            android:layout_height="60px"
+            android:spinnerMode="dropdown"
+            android:background="@drawable/gdtb_spinner"
+            />
+    </RelativeLayout>
+<!--存放照片的位置-->
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/gdtb_add_savePhoto"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="问题标题:"
-        android:drawableLeft="@drawable/xingxing"
-        android:textColor="#3171AF"
-        android:layout_gravity="center_vertical"
-        android:textSize="18sp"/>
-    <TextView
-        android:layout_width="500px"
-        android:layout_height="wrap_content"
-        android:background="@drawable/tv_bg"/>
-</LinearLayout>
+        android:background="@drawable/gdtb_down_bg"
+        android:gravity="center">
+        <LinearLayout
+            android:id="@+id/ll_gdtb_add_photo"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="80px"
+            android:orientation="horizontal"
+            android:gravity="center">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/gdtb_add_photo"/>
+            <TextView
+                android:layout_marginLeft="20px"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:text="拍照"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_gdtb_add_save"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="100px"
+            android:orientation="horizontal"
+            android:gravity="center">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/gdtb_add_save"/>
+            <TextView
+                android:layout_marginLeft="20px"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:text="保存"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_gdtb_add_commit"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="100px"
+            android:orientation="horizontal"
+            android:gravity="center">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/gdtb_commit"/>
+            <TextView
+                android:layout_marginLeft="20px"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:text="提交"/>
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
