--- a/app/src/main/res/layout/activity_xxbg.xml
+++ b/app/src/main/res/layout/activity_xxbg.xml
@@ -126,9 +126,10 @@
             android:layout_gravity="center"
             android:textColor="@color/white"/>
     </RadioGroup>
-<android.support.v4.view.ViewPager
-    android:id="@+id/viewpager_xxbg"
+<LinearLayout
+    android:id="@+id/framelayout_xxbg"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-</android.support.v4.view.ViewPager>
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
+</LinearLayout>
 </LinearLayout>
