--- a/app/src/main/res/layout/fragment_gdcl.xml
+++ b/app/src/main/res/layout/fragment_gdcl.xml
@@ -3,5 +3,94 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EAF1F9">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@drawable/gdtb_title"
+        android:gravity="center_vertical">
+        <CheckBox
+            android:layout_marginLeft="5px"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_width="200px"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="问题标题"
+            android:textSize="16sp"
+            android:textColor="@color/white"/>
+        <TextView
+            android:layout_width="150px"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="联系人"
+            android:textSize="16sp"
+            android:textColor="@color/white"/>
+        <TextView
+            android:layout_width="200px"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="联系电话"
+            android:textSize="16sp"
+            android:textColor="@color/white"/>
+        <TextView
+            android:layout_width="250px"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="发生地点"
+            android:textSize="16sp"
+            android:textColor="@color/white"/>
+        <TextView
+            android:layout_width="170px"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="工单状态"
+            android:textSize="16sp"
+            android:textColor="@color/white"/>
+        <TextView
+            android:layout_width="170px"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="紧急程度"
+            android:textSize="16sp"
+            android:textColor="@color/white"/>
+    </LinearLayout>
 
+    <ListView
+        android:id="@+id/listview_gdcl"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+    </ListView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="80px"
+        android:orientation="horizontal"
+        android:layout_gravity="bottom"
+        android:gravity="center">
+
+            <TextView
+                android:id="@+id/tv_gdcl_cl"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:text="处理"
+                android:gravity="center"
+                android:background="@drawable/gdps_item_lqgd"
+                android:textColor="@color/white"
+                android:textSize="18sp"/>
+
+            <TextView
+                android:id="@+id/tv_gdcl_tj"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:text="提交"
+                android:background="@drawable/gdps_item_psgd"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:textSize="18sp"/>
+
+    </LinearLayout>
 </LinearLayout>
