--- a/app/src/main/res/layout/fragment_gdps.xml
+++ b/app/src/main/res/layout/fragment_gdps.xml
@@ -3,16 +3,40 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EAF1F9">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60px"
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:gravity="center">
     <TextView
-    android:id="@+id/tv_gdps_num"
-    android:layout_width="match_parent"
-    android:layout_height="80px"
-    android:text="本次共查到0条"
+    android:layout_width="wrap_content"
+    android:layout_height="60px"
+    android:text="本次共查到"
+    android:textSize="14sp"
     android:gravity="center"/>
+        <TextView
+            android:id="@+id/tv_gdps_num"
+            android:layout_width="wrap_content"
+            android:layout_height="60px"
+            android:text="  0  "
+            android:textSize="14sp"
+            android:textColor="@color/red"
+            android:gravity="center"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="60px"
+            android:text="条"
+            android:textSize="14sp"
+            android:gravity="center"/>
+    </LinearLayout>
     <ListView
         android:id="@+id/listview_gdps"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     </ListView>
+
+
 </LinearLayout>
