--- a/app/src/main/res/layout/fragment_gdtb.xml
+++ b/app/src/main/res/layout/fragment_gdtb.xml
@@ -65,7 +65,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/gdtb_title"
         android:layout_gravity="bottom"
         android:orientation="horizontal"
         android:gravity="center">
@@ -73,6 +72,7 @@
             android:id="@+id/ll_gdtb_add"
             android:layout_width="0dp"
             android:layout_weight="1"
+            android:background="@drawable/gdtb_title"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center">
@@ -91,8 +91,10 @@
         </LinearLayout>
         <LinearLayout
             android:id="@+id/ll_gdtb_edit"
+            android:layout_marginLeft="5px"
             android:layout_width="0dp"
             android:layout_weight="1"
+            android:background="@drawable/gdtb_title"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center">
@@ -113,8 +115,10 @@
             android:id="@+id/ll_gdtb_del"
             android:layout_width="0dp"
             android:layout_weight="1"
+            android:layout_marginLeft="5px"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:background="@drawable/gdtb_title"
             android:gravity="center">
             <ImageView
                 android:layout_width="wrap_content"
@@ -134,7 +138,9 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5px"
             android:orientation="horizontal"
+            android:background="@drawable/gdtb_title"
             android:gravity="center">
             <ImageView
                 android:layout_width="wrap_content"
