--- a/app/src/main/res/values-mdpi/styles.xml
+++ b/app/src/main/res/values-mdpi/styles.xml
@@ -21,4 +21,25 @@
         <item name="android:drawablePadding">16dp</item>
         <item name="android:textColor">@android:color/black</item>
     </style>
+
+    <style name="AnimBottom" parent="@android:style/Animation">  
+               <item name="android:windowEnterAnimation">@anim/push_bottom_in</item>  
+               <item name="android:windowExitAnimation">@anim/push_buttom_out</item>  
+           </style>  
+      
+       <style name="MyDialogStyleBottom" parent="AppTheme">  
+           <item name="android:windowAnimationStyle">@style/AnimBottom</item>  
+           <item name="android:windowFrame">@null</item>  
+    <!-- 边框 -->  
+         <!--   <item name="android:windowIsFloating">true</item> -->  
+    <!-- 是否浮现在activity之上 -->  
+     <!-- 半透明 -->  
+           <item name="android:windowIsTranslucent">true</item>  
+     <!-- 无标题 -->  
+           <item name="android:windowNoTitle">true</item>  
+    <!-- 背景透明 -->  
+           <item name="android:windowBackground">@android:color/transparent</item>  
+    <!-- 是否允许对话框的背景变暗 -->  
+           <item name="android:backgroundDimEnabled">true</item>  
+       </style>  
 </resources>
