--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -71,4 +71,5 @@
     <dimen name="dp300">300dp</dimen>
     <dimen name="dp350">350dp</dimen>
     <dimen name="dp700">700dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
